testing and other minor improvements