@@ -61,7 +61,7 @@
         <native.skip>true</native.skip>
 
         <!--   Byte Buddy Agent     -->
-        <byte-buddy.version>1.17.8</byte-buddy.version>
+        <byte-buddy.version>1.15.11</byte-buddy.version>
         <spring-restdocs.version>3.0.3</spring-restdocs.version>
         <springdoc.version>2.8.3</springdoc.version>
     </properties>
@@ -305,6 +305,18 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.2.5</version>
+                    <configuration>
+                        <argLine>
+                            --enable-preview -javaagent:${settings.localRepository}/net/bytebuddy/byte-buddy-agent/${byte-buddy.version}/byte-buddy-agent-${byte-buddy.version}.jar @{argLine}
+                        </argLine>
+                    </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <version>3.2.5</version>
                     <configuration>
                         <argLine>
                             --enable-preview -javaagent:${settings.localRepository}/net/bytebuddy/byte-buddy-agent/${byte-buddy.version}/byte-buddy-agent-${byte-buddy.version}.jar @{argLine}
